Created a to-do list webpage using vue meteorJs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <script>
-            let app = Vue.createApp({ //creates an application
+            let app = Vue.createApp({ 
                 data: function() {
                     return{
                         greeting: 'Hello Vue 3!',
@@ -52,7 +52,7 @@
                         this.isVisible = !this.isVisible
                     },
                     greet(greeting){
-                        console.log(greeting)   //Event modifier
+                        console.log(greeting)   
                     }
                 }
             })
@@ -80,7 +80,7 @@
             }    
             }
             )
-            app.mount('#app') //Runs when entire page is loaded
+            app.mount('#app') //Runs when entire page is loaded.
         </script>    
 
 
